--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
 
 .header {
     overflow: hidden;
-    background-color: #f1f1f1;
+    background-color: white;
     padding: 9px 13px;
 }
 
@@ -47,6 +47,7 @@ body {
   justify-content: center;
   overflow: hidden;
   background-color: #333;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);;
   }
   
 .topnav a {
@@ -60,7 +61,7 @@ body {
 }
   
 .active {
-  background-color: #983939;
+  background-color: #19a095;
   color: white;
 }
   
@@ -132,59 +133,64 @@ body {
 
 /* Styling the content */
 .content {
-    padding: 10px;
-    height: 800px;
-    margin: 0px 90px;
+  padding: 10px;
+  height: auto;
+  margin: 0px 180px;
     
 }
 
+/* Notification Column */
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  height: auto;
+}
+
+.row {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+hr {
+  border-width: 1px;
+  height: 0;
+  margin-top: 2.5em;
+  margin-bottom: 0.5em;
+  border-style: inset;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
 .sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 .sticky + .content {
-    padding-top: 60px;
+  padding-top: 60px;
 }
 
 /* Styling the footer */
 
 .footer {
-    background-color: white;
-    width: 100%;
-    text-align: center;
+  position: fixed;
+  background-color: white;
+  width: 100%;
+  text-align: center;
+  bottom: 0;
 }
 
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child), .dropdown .dropbtn {
-      display: none;
-    }
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
+  .column {
+    width: 100%;
   }
-  
-  /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-  @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive a.icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-    .topnav.responsive .dropdown {float: none;}
-    .topnav.responsive .dropdown-content {position: relative;}
-    .topnav.responsive .dropdown .dropbtn {
-      display: block;
-      width: 100%;
-      text-align: left;
-    }
-  }
+}
